commiting chat commonents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
-	<a class="navbar-brand" href="#">Meanbook for Geeks</a>
+	<a class="navbar-brand" href="#">MyCHAAAT APP</a>
 </nav>
 
 <!-- routing area -->
