--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -6,7 +6,34 @@
 	border-radius: 10px;
 	height: 50px;
 }
+.list-group-item{
+	width: 102%;
+}
 .btn-success{
 	height: 50px;
 	border-radius: 10px;
+}
+
+.list-group::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+.list-group::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.list-group::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+									   color-stop(0.86, rgb(28,58,148)));
 }
